# eyebrain

./: .env.example  .gitignore  COLLAB.md  DEMO_SCRIPT.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
eyebrain/: __init__.py  cli.py  config.py  embeddings.py  index.py  models.py  vision.py
eyebrain/ingest/: __init__.py  video.py
eyebrain/rag/: __init__.py  answer.py  moss_index.py  retriever.py  synthesize.py
eyebrain/voice/: agent.py  minimax_tts.py
eyebrain/web/: app.py  registry.py  ui.py  video.py
moss_sidecar/: Dockerfile  server.py
scripts/: add_camera.py  ingest_folder.py  make_placeholder_videos.py  recaption.py  record_camera.py  seed_demo.py  sync_to_moss.py
slides/: architecture.html  title.html
tests/: test_answer.py  test_index.py  test_registry.py  test_synthesize.py  test_web.py
