[project]
name = "eyebrain"
version = "0.1.0"
description = "On-device natural-language search for multi-camera security footage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]
semantic = [
    "fastembed>=0.4",
]
vision = [
    "numpy>=1.26",
    "opencv-python-headless>=4.10",
    "ollama>=0.4",
]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
moss = [
    "moss>=0.1",
]
voice = [
    "livekit-agents>=0.12",
    "livekit-plugins-openai>=0.10",
    "livekit-plugins-silero>=0.7",
    "livekit-plugins-deepgram>=0.6",
    "livekit-plugins-cartesia>=0.4",
]

[project.scripts]
eyebrain = "eyebrain.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eyebrain"]
