[project]
name = "eyebrain"
version = "0.1.0"
description = "On-device natural-language search for multi-camera security footage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
    "mypy>=1.10",
]
semantic = [
    "fastembed>=0.4",
]
vision = [
    "numpy>=1.26",
    "opencv-python-headless>=4.10",
    "ollama>=0.4",
]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
moss = [
    # The Moss native runtime runs in the Linux sidecar (see moss_sidecar/), not on the
    # Mac. The app only needs an HTTP client to reach it.
    "requests>=2.31",
]
voice = [
    "livekit-agents>=0.12",
    "livekit-plugins-openai>=0.10",
    "livekit-plugins-silero>=0.7",
    "livekit-plugins-deepgram>=0.6",
    "livekit-plugins-cartesia>=0.4",
]

[project.scripts]
eyebrain = "eyebrain.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eyebrain"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Focused on correctness (pycodestyle errors + pyflakes: unused imports, undefined names,
# shadowing) rather than style churn. Line length is a formatter concern, not a lint error.
select = ["E", "F"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
# Lenient: this is an MVP with optional native deps (cv2, moss, livekit) that lack stubs.
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = false
exclude = ["moss_sidecar/", "scripts/", "tests/"]
